[package]
name = "morris"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "cargo-morris"
path = "src/main.rs"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
marauders = { path = "../mutant-rs", default-features = false, features = ["syntax-rust-functional"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
